{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerStandard",
            "id": "88c386c5-fd8e-491d-b2f1-3265e64430a0",
            "actions": [
                {
                    "name": "LookY",
                    "type": "Value",
                    "id": "912fb961-0899-4e3c-b210-9ef9294af256",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "LookX",
                    "type": "Value",
                    "id": "3a5de3dc-65b1-452c-a1d3-532c5c732a6f",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Gun",
                    "type": "Button",
                    "id": "cb7d3231-fa39-4311-907f-9822c9394f9e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "ThrustersX",
                    "type": "Value",
                    "id": "5f16383b-f210-40ec-97d3-ed2c3d02e658",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "ThrustersZ",
                    "type": "Value",
                    "id": "511d6d2a-f29a-4572-8dab-e79c48f2ef08",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "ThrustersY",
                    "type": "Value",
                    "id": "ba372ea1-4fad-4b30-a985-9afd40bbd7ce",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Look",
                    "type": "PassThrough",
                    "id": "aaed1b93-b7c6-4e80-923d-23644379e895",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "PickUp",
                    "type": "Button",
                    "id": "022a9da4-69e4-4330-bcec-45dbd039fa65",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.1)"
                },
                {
                    "name": "PushBack",
                    "type": "Button",
                    "id": "0583a930-db09-4826-a685-60ca592e3205",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0820ef19-9f03-4871-9196-b99165cc05d1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Gun",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "c217030c-608a-4e5c-a456-c3da485e94b2",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrustersX",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "f7f4b2b0-bf1d-4827-8a76-7b8b828cbbfd",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrustersX",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "09128aaa-4b8d-4e99-b829-99cf14cb69e2",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrustersX",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis Gamepad",
                    "id": "fdf0c270-7f71-4b23-9616-53986a2a9b9c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrustersX",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "dfda0eb2-b0a9-49e5-abe2-9654a62251d4",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrustersZ",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "3fb57f3e-88c6-46a4-8654-c244edb970d5",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrustersZ",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "0e116ad3-59c8-4a94-a3d2-f470e9c842af",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrustersZ",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis Gamepad",
                    "id": "dcd28224-9f35-4ac6-8c48-43a7a75b298b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrustersZ",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c5c46e52-0a20-44ee-ae8d-8fcd5c93d3fc",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b06f6aeb-a4ef-40a2-9e02-27ac10cd5e10",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "96666299-3292-4522-8713-1e29f7d2ed6a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrustersY",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "b9aed671-054a-4c1b-9ace-0fdeedc57e8a",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrustersY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "0bd03380-ce5e-4b31-9556-95f09deeda60",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrustersY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis Gamepad",
                    "id": "11b49996-08fe-4e3c-864b-e98a4c95c0eb",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrustersY",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a8161dc5-adeb-4e4a-af11-fb01a737e68d",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7f48c8e5-6781-4573-9496-e18688c9d6ef",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PickUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eba35a9a-a837-4455-b998-2f9c371a1f7c",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PushBack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UserInterface",
            "id": "4a9c8d23-82b1-4118-8c24-0e5f0954bdda",
            "actions": [
                {
                    "name": "Restart",
                    "type": "Button",
                    "id": "7ad259dc-2c97-4f1f-93b4-a17f47127467",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "5c287c59-f705-4c25-9928-9959f7685510",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Screenshot",
                    "type": "Button",
                    "id": "1817465e-0b78-4f4d-b5a1-3bb5e2463be6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "afbcf17d-6094-474e-8b5b-8cd9cba4ec8a",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "06ad26be-43d5-4d6a-932c-68127e0f7713",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6a82d803-3d0e-4087-95f7-b7558fe3ebf2",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Screenshot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}